--- a/css/sass/pages/_interaction.scss
+++ b/css/sass/pages/_interaction.scss
@@ -7,7 +7,6 @@
 
 .interaction {
 	text-align: center;
-
 	h1, h2, h3 {
 		font-family: $medium;
 		
@@ -19,7 +18,7 @@
 
 .interaction-container {
 	// background: $dark-blue;
-	background: #1D2A46;
+	// background: #1D2A46;
 
 	h1 {
 		text-transform: uppercase;
