--- a/css/sass/components/_nav.scss
+++ b/css/sass/components/_nav.scss
@@ -53,19 +53,14 @@
  * SECONDARY NAVIGATION
  */
 
-.secondary-nav-hidden { //has something to do with the postitioning try chaning to relative
-	// bottom: -80;
-	opacity: 0;
-	transition: all 1s ease;
-}
+.secondary-nav { 
 
-
-.sticky-nav-bar {
 	background: $dark-blue;
 	width: 100%;
 	height: 80px;
 	position: fixed;
 }
+
 
 /**
  * FULL PAGE NAVIGATION
