--- a/css/sass/main.scss
+++ b/css/sass/main.scss
@@ -20,7 +20,7 @@
 @import "pages/home";
 @import "pages/about";
 @import "pages/prototype";
-@import "pages/interaction";
+@import "pages/ui";
 
 
 // Additional styles to think about
