--- a/css/sass/components/_nav.scss
+++ b/css/sass/components/_nav.scss
@@ -53,8 +53,9 @@
  * SECONDARY NAVIGATION
  */
 
-.secondary-nav { 
 
+
+.secondary-nav { 
 	background: $dark-blue;
 	width: 100%;
 	height: 80px;
@@ -68,11 +69,12 @@
 
 .fp-nav-wrapper {
 	position: fixed;
-	z-index: 12;
+	z-index: 200;
 	background: #000;
 	width: 100%;
 	height: 100%;
 	flex-direction: column;
+
 }
 	
 .menu-container {
@@ -98,9 +100,21 @@
 	}
 }
 
-.nav-content-text{
-	display: none;
+.nav-back-button {
+	cursor: pointer;
+	position: absolute;
+	top: 4%;
+	right: 4%;
+	i {
+		font-size: 2.5em;
+		color: $salmon;
+	}
+
 }
+
+// .nav-content-text{
+// 	display: none;
+// }
 
 
 /* Larger than mobile */
@@ -172,7 +186,7 @@
  */
 
 .social-main {
-	z-index: 101;
+	z-index: 100;
 	position: absolute;
 	right: 4%;
 	bottom: 4%;
