--- a/css/sass/pages/_ui.scss
+++ b/css/sass/pages/_ui.scss
@@ -125,6 +125,7 @@
 /* Intro section */
 .ui-intro-wrapper {
 	// background: #043464;
+	min-height: 100vh;
 	.ui-watermark {
 		width: 100%;
 		top: 50%;
