start on resume page

--- a/css/main.css
+++ b/css/main.css
@@ -273,6 +273,17 @@ html {
 /**
  * main flex-container
  */
+img {
+  width: 100%; }
+
+.center-content {
+  position: absolute;
+  top: 50%;
+  left: 50%;
+  -webkit-transform: translate(-50%, -50%);
+          transform: translate(-50%, -50%);
+  text-align: center; }
+
 .wrapper-container {
   max-width: 960px;
   padding: 30px;
@@ -968,14 +979,6 @@ hr {
 .relative {
   position: relative; }
 
-.center-content {
-  position: absolute;
-  top: 50%;
-  left: 50%;
-  -webkit-transform: translate(-50%, -50%);
-          transform: translate(-50%, -50%);
-  text-align: center; }
-
 /* Homepage - pulsing button */
 .pulse {
   position: absolute;
@@ -1544,6 +1547,59 @@ hr {
     .framer img {
       width: 100%; } }
 
+/* RESUME
+   ========================================================================== */
+/**
+ * MOBILE FIRST QUERIES
+ */
+.resume {
+  background: black; }
+
+.resume-body .experience {
+  max-height: 550px;
+  overflow: scroll; }
+
+.resume-body .experience,
+.resume-body .education {
+  -ms-flex-preferred-size: 45%;
+      flex-basis: 45%;
+  -webkit-box-flex: 1;
+      -ms-flex-positive: 1;
+          flex-grow: 1;
+  min-width: 400px; }
+
+.resume-body p,
+.resume-body li {
+  font-size: 0.9em; }
+
+.resume-body h2 {
+  text-transform: uppercase; }
+
+.resume-body .experience > h2 {
+  margin-bottom: 1em;
+  text-decoration: underline; }
+
+.resume-body .work-placement {
+  font-family: avant_book, sans-serif; }
+  .resume-body .work-placement span {
+    font-family: avant_bold, sans-serif; }
+
+.resume-body .work-position {
+  margin-bottom: 1em;
+  font-style: italic; }
+
+.resume-body .work-description {
+  margin-bottom: 1em; }
+
+.resume-body .work-duites li:first-child {
+  list-style: none;
+  padding-left: 0; }
+
+/* Larger than mobile */
+/* Larger than phablet */
+/* Larger than tablet */
+/* Larger than desktop */
+/* Larger than Desktop HD */
 @media print {
   header,
   nav,
@@ -1554,6 +1610,3 @@ hr {
   body {
     font: 14pt Georgia, "Times New Roman", Times, serif;
     line-height: 1.3; } }
-
-img {
-  max-width: 100%; }
