--- a/css/sass/base/_flex.scss
+++ b/css/sass/base/_flex.scss
@@ -5,6 +5,17 @@
  * main flex-container
  */
 
+img {
+	width: 100%;
+}
+.center-content {
+  position: absolute;
+  top: 50%;
+  left: 50%;
+  transform: translate(-50%, -50%);
+  text-align: center;
+}
+
 .wrapper-container {
   max-width: 960px;
   padding: 30px;
