--- a/css/sass/base/_type.scss
+++ b/css/sass/base/_type.scss
@@ -23,6 +23,8 @@ $body_avant: avant_book, sans-serif;
 $medium_avant: avant_medium, sans-serif;
 $bold_avant: avant_bold, sans-serif;
 
+$primary-font-color : #373D3F; //Raven
+
 
 body, 
 p {
