--- a/css/sass/pages/_prototype.scss
+++ b/css/sass/pages/_prototype.scss
@@ -12,7 +12,7 @@
 	transform: translate(-50%, -50%);
 	img {
 		opacity: 0.08;
-		width: 500px;
+		width: 300px;
 	}
 }
 
@@ -63,6 +63,13 @@
  * LARGER THAN TABLET
  */
 @media screen and (min-width: 750px) {
+
+
+	.p-background-icon {
+		img {
+			width: 500px;
+		}
+}
 	
 	.prototype-container {
 		article {
