--- a/css/main.css
+++ b/css/main.css
@@ -298,6 +298,48 @@ img {
   padding: 30px; }
 
 /**
+ * NEW FLEX STUFF
+ */
+.flex-container {
+  max-width: 960px;
+  margin: 0 auto;
+  display: -webkit-box;
+  display: -ms-flexbox;
+  display: flex;
+  background: green; }
+
+.col-one {
+  -ms-flex-preferred-size: 100%;
+      flex-basis: 100%;
+  margin: 10px; }
+
+.col-two {
+  -ms-flex-preferred-size: 50%;
+      flex-basis: 50%;
+  margin: 10px;
+  width: 400px; }
+
+.col-three {
+  -ms-flex-preferred-size: calc(100%/3);
+      flex-basis: calc(100%/3);
+  margin: 10px; }
+
+.col-four {
+  -ms-flex-preferred-size: 24%;
+      flex-basis: 24%;
+  margin: 10px; }
+
+.col-five {
+  -ms-flex-preferred-size: calc(100%/5);
+      flex-basis: calc(100%/5);
+  margin: 10px; }
+
+.col-six {
+  -ms-flex-preferred-size: calc(100%/6);
+      flex-basis: calc(100%/6);
+  margin: 10px; }
+
+/**
  * Flex stuff
  */
 .flex {
